--- a/shippable.yml
+++ b/shippable.yml
@@ -1,5 +1,20 @@
 # Language setting
 language: java
+services:
+  - cassandra 
+  - couchdb 
+ # - elasticsearch 
+  - memcached 
+  - mongodb 
+  - mysql 
+  - neo4j 
+  - postgres 
+  - rabbitmq 
+  - redis 
+  - rethinkdb 
+  - riak 
+  - selenium 
+  - sqllite 
 
 # Version number
 jdk:
