--- a/shippable.yml
+++ b/shippable.yml
@@ -1,6 +1,19 @@
 # Language setting
 language: java
-
+services:
+ # - cassandra 
+ # - elasticsearch 
+ # - memcached 
+ # - mongodb 
+  - mysql 
+ # - neo4j 
+  - postgres 
+ # - rabbitmq 
+ # - redis 
+  - selenium 
+ # - sqlite 
+ # - couchdb 
+  - rethinkdb 
 # Version number
 jdk:
   - openjdk6
@@ -20,4 +33,8 @@ build:
    # - ant -version
     - gradle --version
     - mvn --version    
+    - echo $SHIPPABLE_MYSQL_BINARY
+    - echo $SHIPPABLE_POSTGRES_BINARY
+    - echo $SHIPPABLE_SELENIUM_BINARY
+    - echo $SHIPPABLE_RETHINKDB_BINARY
     
