--- a/shippable.yml
+++ b/shippable.yml
@@ -25,7 +25,7 @@ jdk:
 build:
   pre_ci_boot:
     image_name: drydock/u14javall
-    image_tag: master
+    image_tag: v5.4.1
     pull: true
 
   ci:
