--- a/shippable.yml
+++ b/shippable.yml
@@ -10,17 +10,16 @@ services:
   - postgres 
  # - rabbitmq 
  # - redis 
-  - selenium 
+ # - selenium 
  # - sqlite 
  # - couchdb 
   - rethinkdb 
 # Version number
-jdk:
-  - openjdk6
-  - openjdk7
-  - oraclejdk7
-  - oraclejdk8
-  - openjdk8
+#jdk:
+#  - openjdk6
+ # - openjdk7
+ # - oraclejdk7
+ ## - openjdk8
 
 build:
   pre_ci_boot:
