--- a/shippable.yml
+++ b/shippable.yml
@@ -16,11 +16,11 @@ services:
  # - couchdb 
   
 # Version number
-#jdk:
+jdk:
   #- openjdk6
  # - openjdk7
   #- oraclejdk7
-  #- oraclejdk8
+  - oraclejdk8
   #- openjdk8
 
 build:
