--- a/shippable.yml
+++ b/shippable.yml
@@ -15,11 +15,11 @@ services:
  # - couchdb 
   - rethinkdb 
 # Version number
-#jdk:
+jdk:
 #  - openjdk6
  # - openjdk7
  # - oraclejdk7
- ## - openjdk8
+  - openjdk8
 
 build:
   pre_ci_boot:
